create section main_posts

--- a/index.html
+++ b/index.html
@@ -50,6 +50,32 @@
             </div>
         </div>
     </section>
+    <section class="main_posts">
+        <div class="box_posts">
+            <div class="posts_head" >
+                <h5>Recent posts</h5>
+                <a href="#" alt="View all">View all</a>
+            </div>
+            <div class="recent_posts">
+                <article class="posts_item">
+                    <h3>Making a design system from scratch</h3>
+                    <div class="posts_date">
+                        <span class="posts_vertline" >12 Feb 2020</span>
+                        <span>Design, Pattern</span>
+                    </div>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </article>
+                <article class="posts_item">
+                <h3>Creating pixel perfect icons in Figma</h3>
+                <div class="posts_date">
+                    <span class="posts_vertline" >12 Feb 2020</span>
+                    <span>Figma, Icon Design</span>
+                </div>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </article>
+            </div>
+        </div>
+    </section>
     <section class="section_works">
         <div class="box_works">
                 <h3 class="featured_works">Featured works</h3>
@@ -107,7 +133,6 @@
 
         </div>
     </section>
-
     <section class="section_form">
         <div class="box_form">
             <form name="contact" action="#" method="post">
