--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul class="icon_menu" >
                 <li>
-                   <a href="work.html">Works</a>
+                   <a href="#">Works</a>
                 </li>
                 <li>
                     <a href="blog.html">Blog</a>
