--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <nav>
             <ul class="icon_menu" >
                 <li>
-                   <a href="#">Works</a>
+                   <a href="work.html" title="Works">Works</a>
                 </li>
                 <li>
-                    <a href="blog.html">Blog</a>
+                    <a href="blog.html" title="Blog">Blog</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#" title="Contact">Contact</a>
                 </li>
             </ul>
         </nav>
