--- a/blog.html
+++ b/blog.html
@@ -16,10 +16,10 @@
     <nav>
       <ul class="icon_menu" >
         <li>
-          <a href="#">Works</a>
+          <a href="work.html">Works</a>
         </li>
         <li>
-          <a href="#">Blog</a>
+          <a href="blog.html">Blog</a>
         </li>
         <li>
           <a href="#">Contact</a>
