--- a/work.html
+++ b/work.html
@@ -16,10 +16,10 @@
     <nav>
       <ul class="icon_menu" >
         <li>
-          <a href="#">Works</a>
+          <a href="work.html">Works</a>
         </li>
         <li>
-          <a href="#">Blog</a>
+          <a href="blog.html">Blog</a>
         </li>
         <li>
           <a href="#">Contact</a>
@@ -36,7 +36,7 @@
       <div class="works_image">
         <img src="images/work_image1.svg" alt="Designing Dashboards" >
       </div>
-      <div>
+      <div class="post_info">
         <h2>Designing Dashboards</h2>
         <div>
           <span class="year_post">2020</span>
@@ -47,7 +47,51 @@
         </p>
       </div>
     </article>
-
+    <article class="item_work">
+      <div class="works_image">
+        <img src="images/work_image2.svg" alt="Designing Dashboards" >
+      </div>
+      <div class="post_info">
+        <h2>Vibrant Portraits of 2020</h2>
+        <div>
+          <span class="year_post">2018</span>
+          <span  class="type_post">Illustration</span>
+        </div>
+        <p>
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+        </p>
+      </div>
+    </article>
+    <article class="item_work">
+      <div class="works_image">
+        <img src="images/work_image3.svg" alt="Designing Dashboards" >
+      </div>
+      <div class="post_info">
+        <h2>36 Days of Malayalam type</h2>
+        <div>
+          <span class="year_post">2018</span>
+          <span  class="type_post">Typography</span>
+        </div>
+        <p>
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+        </p>
+      </div>
+    </article>
+    <article class="item_work">
+      <div class="works_image">
+        <img src="images/work_image4.svg" alt="Designing Dashboards" >
+      </div>
+      <div class="post_info">
+        <h2>Components</h2>
+        <div>
+          <span class="year_post">2018</span>
+          <span  class="type_post">Components, Design</span>
+        </div>
+        <p>
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+        </p>
+      </div>
+    </article>
   </div>
 </section>
 </main>
